--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "validator": "^13.7.0"
   }
 }
